--- a/main.html
+++ b/main.html
@@ -36,6 +36,37 @@
 
 <script>
 //Your code goes here 
+const slider = document.querySelector('.items');
+let isDown = false;
+let startX;
+let scrollLeftStart;
+
+slider.addEventListener('mousedown', (e) => {
+  isDown = true;
+  slider.classList.add('active');
+  startX = e.pageX - slider.offsetLeft;
+  scrollLeftStart = slider.scrollLeft;
+});
+
+slider.addEventListener('mouseleave', () => {
+  isDown = false;
+  slider.classList.remove('active');
+});
+
+slider.addEventListener('mouseup', () => {
+  isDown = false;
+  slider.classList.remove('active');
+});
+
+slider.addEventListener('mousemove', (e) => {
+  if (!isDown) return;
+  e.preventDefault();
+  const x = e.pageX - slider.offsetLeft;
+  const walk = (x - startX) * 3; // Multiply by 3 for smoother/faster scrolling
+  slider.scrollLeft = scrollLeftStart - walk;
+});
+
+	
 </script>
 
   </body>
